feat: removing unused classes, adding new DAOs, adding new methods to Admin